# figtree

./: .gitmodules  CLAUDE.md  README.md  build_prod.bat  build_tauri.bat  dev.bat
.app-analyzer/: sitemap.json
.design-review/: report.md
.react-review/: report.md
.tauri-pipeline/: 00-scope.md  01-rust-review.md  02-tauri-optimization.md  03-react-performance.md  04-layout.md  05-polish.md  06-final-report.md  state.json
.ui-studio/: 00-context.md  01-brief.md  02-design-direction.md  03-layout.md  04-ux-patterns.md  05-component-architecture.md  07-plan.md  08-execution-log.md  09-polish-log.md  10-performance-log.md  11-review.md  12-humanize-log.md  state.json
app/: package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  builtinPrompts.ts  main.tsx  themes.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/permissions/: default.toml
app/src-tauri/src/: autocomplete.rs  commands.rs  logging.rs  main.rs  marketplace.rs  projects.rs  pty.rs  session.rs  sidecar.rs  themes.rs  tools.rs  usage_stats.rs
app/src/components/: AboutPage.css  AboutPage.tsx  AgentView.tsx  AsciiLogo.tsx  ChatView.css  ChatView.tsx  ErrorBoundary.tsx  FolderTree.tsx  Modal.css  NewTabPage.tsx  SessionConfig.tsx  SessionPanel.css  SessionPanel.tsx  SessionViewProps.ts  SettingsPage.css  SettingsPage.tsx  ShortcutsOverlay.tsx  StatusBar.tsx  SystemPromptPage.css  SystemPromptPage.tsx  TabBar.css  TabBar.tsx  TabSidebar.css  TabSidebar.tsx  Terminal.css  Terminal.tsx  TerminalView.css  TerminalView.tsx  XTermView.tsx
app/src/components/chat/: AgentTreePanel.tsx  BookmarkPanel.tsx  ChatInput.css  ChatInput.tsx  CommandMenu.tsx  MentionMenu.tsx  MessageBubble.tsx  MinimapPanel.tsx  PermissionCard.tsx  ResultBar.tsx  RightSidebar.css  RightSidebar.tsx  ThinkingIndicator.tsx  ThinkingPanel.tsx  TodoPanel.tsx  ToolCard.tsx  ToolGroup.tsx
app/src/components/modals/: CreateProjectModal.tsx  SettingsModal.tsx
app/src/components/terminal/: AnsiUtils.ts  InputManager.ts  TerminalDocument.ts  TerminalRenderer.ts
app/src/data/themes/: cyberpunk-2077.json  daisyui-retro.json  dracula.json  gandalf.json  index.ts  (+10 more)
app/src/hooks/: useAgentSession.ts  useAutocomplete.ts  usePty.ts  useSessionController.ts  useTabManager.ts
app/src/utils/: linkifyPaths.tsx  notify.ts
artifacts/: community-readmes-all.md  terminal-chat-mockup.html
artifacts/community-readmes/plandex-ai_plandex/: README.md
artifacts/community-readmes/rohitg00_awesome-claude-code-toolkit/: README.md
docs/: ANVIL_ANALYSIS.md  ANVIL_REPORT.html  ANVIL_USER_FLOWS.md  TECHNICAL.md
docs/plans/: 2026-03-15-chat-ui-migration.md  2026-03-18-ux-improvements.md  2026-03-31-team-agents-design.md
exec/: anvil.log.1  anvil.log.2  anvil.log.3
exec/data/prompts/: claudione.md  pragmatic-personality.md  skeptical-personality.md
exec/sidecar/: package-lock.json  package.json  sidecar.js
sidecar/: package-lock.json  package.json  sidecar.js  sidecar.ts
(+5 files in other folders)
