[package]
name = "claude-code-gui"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# Enable Tauri DevTools (Ctrl+Shift+I inspector). Include only for development builds:
#   cargo tauri dev --features devtools
# Release builds should NOT include this — DevTools exposes the full IPC surface.
devtools = ["tauri/devtools"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
which = "7"
regex-lite = "0.1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
png = "0.17"
arboard = { version = "3", features = ["image-data"] }
notify = "6"

raw-window-handle = "0.6"
tauri-plugin-single-instance = "2"
webview2-com = "0.39"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
# panic = "unwind" (default) — required for catch_unwind to work in release builds.
# "abort" was previously set but defeats the panic-isolation strategy in
# projects.rs (catch_unwind is a no-op with panic = "abort").
